# mcp_demo

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/mcp_demo_yashuashua/: __init__.py  server.py
src/yashuashua_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
